--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -1,22 +1,18 @@
 // USER VARIABLES SECTION
 
-$accent: orange // Accent Color
+$accent: #185ADB // Accent Color
 $fontsize: 16px // Body Font Size
-$textcolor: #333 // Text Color
+$fontsize-sm: 14px
+$textcolor: #000222 // Text Color
 $lineheight: 1.65 // Document Line Height
-$userfont: roboto-oh5, sans-serif // User Font Family
+$userfont: proxima-nova-t, sans-serif // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
-
-// Bootstrap compatible gutter variable => $gutter
-$grid-gutter-width: 30px
-$gutter: $grid-gutter-width
 
 // IMPORT SECTION
 
-@import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
-@import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss' // Bootstrap Breakpoints mixin
-// @import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
-// @import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
+@import "node_modules/swiper/swiper-bundle"
+@import bootstrap-reboot.min
+
 
 // FONTS LOAD SECTION
 
@@ -27,11 +23,7 @@ $gutter: $grid-gutter-width
 		font-weight: $fweight
 		src: url($furl) format('woff2')
 
-@include font('roboto-oh5', normal, 400, '../fonts/roboto-regular-webfont.woff2')
-@include font('roboto-oh5', italic, 400, '../fonts/roboto-italic-webfont.woff2')
-@include font('roboto-oh5', normal, 700, '../fonts/roboto-bold-webfont.woff2')
-@include font('roboto-oh5', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
-
+@include font('proxima-nova-t', normal, 400, '../fonts/proxima-nova.woff2')
 // GENERAL DOCUMENT STYLES
 
 ::placeholder
@@ -56,3 +48,5 @@ body
 	min-width: 320px
 	position: relative
 	overflow-x: hidden
+	background-color: #F0F0F0
+
