--- a/app/styles/sass/blocks/calendar-btn.sass
+++ b/app/styles/sass/blocks/calendar-btn.sass
@@ -32,10 +32,10 @@
       background-size: 10px
       transition: .25s ease-in-out opacity
     &::before
-      background-image: url(/images/dist/add-blue.svg)
+      background-image: url(../images/dist/add-blue.svg)
       opacity: 1
     &::after
-      background-image: url(/images/dist/add-white.svg)
+      background-image: url(../images/dist/add-white.svg)
       opacity: 0
 
 .calendar-btn
@@ -60,9 +60,9 @@
   span
     border-color: #888899
     &::before
-      background-image: url(/images/dist/checked.svg)
+      background-image: url(../images/dist/checked.svg)
     &::after
-      background-image: url(/images/dist/close-light.svg)
+      background-image: url(../images/dist/close-light.svg)
   &:hover
     &::before
       content: 'Убрать'
@@ -75,10 +75,10 @@
   span
     border-color: #888899
     &::before
-      background-image: url(/images/dist/watch-black.svg)
+      background-image: url(../images/dist/watch-black.svg)
       opacity: 1
     &::after
-      background-image: url(/images/dist/watch-white.svg)
+      background-image: url(../images/dist/watch-white.svg)
   &:hover
     span
       background-color: $accent
