--- a/app/styles/sass/blocks/tourist-button.sass
+++ b/app/styles/sass/blocks/tourist-button.sass
@@ -27,7 +27,7 @@
       border-left: 1px solid #fff
 
 .tourist-button__img
-  background-image: url(/images/dist/add-white.svg)
+  background-image: url(../images/dist/add-white.svg)
   background-repeat: no-repeat
   background-position: center
   background-color: $accent
@@ -50,7 +50,7 @@
     &::after
       content: 'Добавленно'
   .tourist-button__img
-    background-image: url(/images/dist/checked.svg)
+    background-image: url(../images/dist/checked.svg)
     position: relative
     transition: .25s ease-in-out background-size
     &::after
@@ -60,7 +60,7 @@
       bottom: 0
       right: 0
       left: 0
-      background-image: url(/images/dist/close.svg)
+      background-image: url(../images/dist/close.svg)
       background-repeat: no-repeat
       background-position: center
       background-size: 0
@@ -78,6 +78,6 @@
     &::after
       content: 'Смотреть'
   .tourist-button__img
-    background-image: url(/images/dist/watch-white.svg)
+    background-image: url(../images/dist/watch-white.svg)
     background-size: 14px
 
