--- a/app/styles/sass/blocks/weeks.sass
+++ b/app/styles/sass/blocks/weeks.sass
@@ -2,7 +2,7 @@
   padding-top: 23px
   width: 100%
   display: flex
-  justify-content: end
+  justify-content: flex-end
   color: #888888
   h4
     font-size: 18px
