fix slider navigation

--- a/app/styles/sass/blocks/speakers-swiper.sass
+++ b/app/styles/sass/blocks/speakers-swiper.sass
@@ -27,7 +27,6 @@
   right: 0
   left: 0
   display: flex
-  background-color: red
   justify-content: space-between
   flex-direction: row
   align-content: center
@@ -47,12 +46,16 @@
     margin-right: -10px
     position: absolute
     right: -32px
+    @media (max-width : 768px)
+      margin-right: -2px
 
 .swiper-button-prev
   &::after
     border-radius: 0 6px 6px 0
     margin-left: -7px
     left: -32px
+    @media (max-width : 768px)
+      margin-left: 7px
 
 .swiper-button-disabled
   display: none
