Было время, поправил таблицу событий, вынес цвета в переменные, убрал лишнее, причесал код

--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -4,9 +4,19 @@ $accent: #185ADB // Accent Color
 $fontsize: 16px // Body Font Size
 $fontsize-sm: 14px
 $textcolor: #000222 // Text Color
-$lineheight: 1.65 // Document Line Height
+$lineheight: 1.30 // Document Line Height
 $userfont: proxima-nova-t, sans-serif // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
+
+// Project colors
+$btn-text-light: #888899
+$dark-bg: #E5E5E5
+$light-bg: #F0F0F0
+$live-color: #FF0011
+$event-color: #FFEE00
+$btn-border-light: #C0C0C0
+$week-label-color: #888888
+$week-item-color: #191919
 
 // IMPORT SECTION
 
