--- a/app/styles/sass/blocks/calendar-btn.sass
+++ b/app/styles/sass/blocks/calendar-btn.sass
@@ -2,7 +2,7 @@
   display: flex
   align-content: center
   text-align: right
-  color: #888899
+  color: $btn-text-light
   background-color: transparent
   border: none
   cursor: pointer
@@ -48,10 +48,6 @@
         opacity: 1
 
 //End of general button style
-
-
-
-//Checked
 
 
 .calendar-btn[enabled]
