--- a/app/styles/sass/blocks/main-header.sass
+++ b/app/styles/sass/blocks/main-header.sass
@@ -17,7 +17,7 @@
   border-radius: 46px
   padding: 9px 21px
   span
-    color: #888899
+    color: $btn-text-light
     cursor: pointer
     user-select: none
   margin: auto 0
