--- a/app/styles/sass/blocks/speakers-swiper.sass
+++ b/app/styles/sass/blocks/speakers-swiper.sass
@@ -21,20 +21,10 @@
     font-size: 11px
     margin-top: 4px
 
-.event-card__navigation
-  position: absolute
-  bottom: 34px
-  right: 0
-  left: 0
-  display: flex
-  justify-content: space-between
-  flex-direction: row
-  align-content: center
-
 .swiper-button-next, .swiper-button-prev
   &::after
     position: relative
-    background-color: #E5E5E5
+    background-color: $dark-bg
     padding: 20px 16px
     font-size: 16px
     font-weight: 700
