--- a/app/styles/sass/blocks/weeks.sass
+++ b/app/styles/sass/blocks/weeks.sass
@@ -3,7 +3,7 @@
   width: 100%
   display: flex
   justify-content: flex-end
-  color: #888888
+  color: $week-label-color
   h4
     font-size: 18px
     display: inline-block
@@ -14,7 +14,7 @@
     padding: 0
     li
       list-style-type: none
-      color: #191919
+      color: $week-item-color
       background-color: #fff
       padding: 5px 9px
       margin: 0 8px
@@ -26,6 +26,6 @@
         color: #fff
       &:first-child
         margin-left: 0
-  @media (max-width : 1345px)
+  @media (max-width : 1280px)
     display: none
 
