--- a/app/styles/sass/blocks/event-card.sass
+++ b/app/styles/sass/blocks/event-card.sass
@@ -9,7 +9,7 @@
   header
     grid-area: date
     border-radius: 24px 24px 0 0
-    background-color: #E5E5E5
+    background-color: $dark-bg
     height: 56px
     h2
       line-height: 125%
@@ -48,13 +48,13 @@
   sup
     margin-left: 8px
     font-size: 16px
-    vertical-align: middle
+    vertical-align: 10px
   @media (max-width : 768px)
     font-size: 24px
     margin-bottom: 12px
     sup
       font-size: 14px
-      vertical-align: baseline
+      vertical-align: 5px
 
 .event-card__content
   grid-area: content
@@ -78,7 +78,7 @@
     height: 0
     overflow: hidden
     border-radius: 0 6px 6px 6px
-    background-color: #F0F0F0
+    background-color: $light-bg
     margin-top: -1px
     padding: 0 24px
     transition: .25s ease-in-out height, .25s ease-in-out padding
@@ -94,6 +94,7 @@
       margin-bottom: 12px
     ol
       padding: 0 12px
+      margin: 0
 
 .event-card__join
   grid-area: join
@@ -104,6 +105,7 @@
     margin-top: 16px
     font-size: 14px
   @media (max-width : 1024px)
+    min-width: unset
     margin-top: 36px
   @media (max-width : 768px)
     order: 1
@@ -114,7 +116,7 @@
   position: relative
   h2
     font-size: 16px
-    color: #E5E5E5
+    color: $dark-bg
     position: relative
     overflow: hidden
     margin-bottom: 36px
@@ -125,7 +127,7 @@
       top: 50%
       height: 1px
       margin-left: 24px
-      background-color: #E5E5E5
+      background-color: $dark-bg
   @media (max-width : 768px)
     h2
       padding-top: 10px
@@ -133,6 +135,17 @@
       &::after
         top: 0
         right: 0
+
+.event-card__navigation
+  position: absolute
+  bottom: 34px
+  right: 0
+  left: 0
+  display: flex
+  justify-content: space-between
+  flex-direction: row
+  align-content: center
+
 
 //Clases for animation of program schedule
 .expanded-btn
